# FSearch

./: ProjDesc.docx  README.md
source code/client/: package-lock.json  package.json
source code/client/src/: Routing.js  useFetch.js
source code/client/src/Pages/: Search.css  Search.js  Service.css  Service.js  User.css  User.js
source code/client/src/app/: store.js
source code/ir/: Cargo.toml  keep.rs
source code/ir/src/: main.rs
source code/modify/: Cargo.toml
source code/modify/src/: main.rs
source code/retrieval/: Cargo.toml
source code/retrieval/src/: main.rs
