[package]
name = "retrieval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-util = "0.2.2"
csv = "1.3.0"
rayon = "1.8.0"
regex = "1.10.2"
rsnltk = "0.1.3"
rust-stemmers = "1.2.0"
serde = "1.0.193"
serde_json = "1.0.108"
stopwords = "0.1.1"
tokio = {version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["cors"] }
